--- a/Test/Test/App.config
+++ b/Test/Test/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DBQuanLySV" connectionString="data source=DESKTOP-CURTPTN;initial catalog=StudentDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBQuanLySV" connectionString="data source=LapTopcuaTien;initial catalog=StudentDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
